Working on Faraday object making the API call

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,8 @@
-<% @station_search.each do |station| %>
+<% @station_search.stations.each do |station| %>
   <ul>
     <li>  <%= station.name %> </li>
     <li>  <%= station.address %> </li>
-    <% station.fuel_types.each do |fuel_type| %>
+    <% stationfuel_types.each do |fuel_type| %>
       <ul>
         <li> fuel_type.name </li>
       </ul>
