Definitely need to refactor, but seems to work. Test is janky, however

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
-
-<% @stations.each do |station| %>
+<%= @sorted_stations.count %> Results
+<% @sorted_stations.each do |station| %>
   <ul>
     <li>  <%= station.name %> </li>
     <li>  <%= station.street_address %> </li>
